Fix: PermissionsFragment checklist UI, What's New dialog, ExecutionModeValidator, string resources

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ ehthumbs.db
 Desktop.ini
 
 # Proposal docs (internal only)
-app-control-x-proposal/
+.app-control-x-proposal/
 
 # Kiro IDE (local steering rules)
 .kiro/
