Fix language switching not working - Use AppCompatDelegate.setApplicationLocales() for proper locale handling - Add locales_config.xml for Android 13+ per-app language support - Remove manual restart dialog, activity recreates automatically - Read current language from AppCompatDelegate instead of prefs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppControlX"
         android:fullBackupContent="@xml/backup_rules"
-        android:dataExtractionRules="@xml/data_extraction_rules">
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:localeConfig="@xml/locales_config">
 
         <!-- Setup Activity (Launcher) -->
         <activity
